# transformer-as-kalman-filter

./: .gitignore  README.md  example_1d.py  example_1d_nonlinear.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.py  model_config.py
data/: __init__.py  base_system.py  data_generator.py  nonlinear_system.py  simple_linear_system.py  simple_nonlinear_system.py
models/: __init__.py  filterformer.py  gru_model.py  kalman_filter.py  mamba_model.py  one_layer_transformer.py  particle_filter.py
scripts/: experiment_linear.py  experiment_nonlinear.py  train.py
tests/: test_filters.py
training/: __init__.py  training.py
