[project]
name = "transformer-as-kalman-filter"
version = "0.1.0"
description = "Comparative study of Transformer-based models for state estimation in linear and nonlinear dynamical systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.9.0",
    "matplotlib>=3.10.7",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
